Add Handlebars template for to-do list

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                       </div>
                     </section>
                     <!-- Home -->
-                    <section class="section-padding" id="home">
+                    <section id="home">
                       <div class="box">
                         <section id="title">
                           <h3 class="text-sans text-strong h3">
@@ -130,24 +130,7 @@
                             </form>
                           </div>
                         </section>
-                        <section id="list">
-                          <ul class="list-unstyled to-do-list">
-                            <li class="to-do-list-item">
-                              <form id="listItemForm">
-                                 <div class="input-group">
-                                   <span class="input-group-addon">
-                                     <input type="checkbox" name="todo[done]" aria-label="checkbox">
-                                   </span>
-                                  <label name="todo[content]" class="form-control">Something you need to do</label>
-                                  <span class="input-group-btn">
-                                    <button type="button" class="btn btn-default btn-custom" data-toggle="collapse" data-target="#editFormCollapse" aria-expanded="false" aria-controls="editFormCollapse" id="editButton">Edit</button>
-                                    <button type="button" class="btn btn-default btn-custom" id="deleteButton">Delete</button>
-                                  </span>
-                                </div>
-                              </form>
-                            </li>
-                          </ul>
-                        </section>
+                        <section id="list"></section>
                       </div>
                     </section>
                   </div>
