Add `washed yellow` color scheme to UI
Thanks to @tachyons-css for the color palette.

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                     <!-- Introduction -->
                     <section class="section-padding" id="introduction">
                       <div class="box">
-                        <p class="text-sans intro-text"><span class="text-lowercase text-sans text-strong">Simpl To-Do</span> provides you a basic way to create and update your to-do list.</p>
+                        <p class="text-sans intro-text"><span class="text-lowercase text-sans text-strong">Simpl To-Do</span> is meant to be an easy way to create and update your to-do list.</p>
                         <p class="message"></p>
                       </div>
                     </section>
@@ -123,7 +123,7 @@
                           <h3 class="text-sans text-strong h3">
                             To–Do
                             <span class="pull-right">
-                              <button type="button" data-toggle="modal" role="button" data-target="#createModal" class="btn btn-default btn-custom">
+                              <button type="button" data-toggle="modal" role="button" data-target="#createModal" class="text-mono text-strong btn btn-default btn-custom create">
                                 Create a To-Do
                               </button>
                             </span>
