Add feedback section for Authentication
The feedback message for Sign In and Sign Up is now shown below the forms, not above.

--- a/index.html
+++ b/index.html
@@ -109,7 +109,6 @@
                       <div class="box">
                         <p class="text-sans intro-text"><span class="text-lowercase text-sans text-strong">Simpl To-Do</span> is meant to be an easy way to create and update your to-do list.</p>
                         <button type="button" data-toggle="modal" role="button" data-target="#learnModal" class="text-lowercase text-mono text-strong btn btn-default btn-custom" id="learnModalButton">Learn More</button>
-                        <p class="message"></p>
                       </div>
                     </section>
                   </div>
@@ -128,6 +127,9 @@
                           <h3 class="text-sans text-strong h3">Sign In<br> <small>Please sign in to continue.</small></h3>
                           <div id="signInTemplate"></div>
                           <small>If you do not have an account, <br class="visible-xs-block"> sign up <button type="submit" class="btn btn-custom bbt" id="signUpButton">here</button>.</small>
+                        </section>
+                        <section>
+                          <p class="message"></p>
                         </section>
                       </div>
                     </section>
