Add feedback message for Sign Up success

--- a/index.html
+++ b/index.html
@@ -121,12 +121,13 @@
                         <section class="sign-up" id="signUpSection">
                           <h3 class="text-sans text-strong h3">Sign Up <br><small>Please sign up to create a free account.</small></h3>
                           <div id="signUpTemplate"></div>
-                          <small>If you already have an account, <br class="visible-xs-block"> sign in <button type="submit" class="btn btn-custom bbt" id="signInButton">here</button>.</small>
+                          <small class="not-signed-up-cta">If you already have an account, <br class="visible-xs-block"> sign in <button type="submit" class="btn btn-custom bbt sign-in-btn">here</button>.</small>
+                          <small class="signed-up-cta">You can sign in <button type="submit" class="btn btn-custom bbt sign-in-btn">here</button>.</small>
                         </section>
                         <section class="sign-in" id="signInSection">
                           <h3 class="text-sans text-strong h3">Sign In<br> <small>Please sign in to continue.</small></h3>
                           <div id="signInTemplate"></div>
-                          <small>If you do not have an account, <br class="visible-xs-block"> sign up <button type="submit" class="btn btn-custom bbt" id="signUpButton">here</button>.</small>
+                          <small>If you do not have an account, <br class="visible-xs-block"> sign up <button type="submit" class="btn btn-custom bbt sign-up-btn">here</button>.</small>
                         </section>
                         <section>
                           <p class="message"></p>
